--- a/ckanext/nap_theme/templates/package/new.html
+++ b/ckanext/nap_theme/templates/package/new.html
@@ -14,7 +14,7 @@
     <div class="module-content">
       <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">
       {% block page_heading %}{{ 
-        _('Publish transport data') }}
+        _('Create a metadate entry so people can find your dataset') }}
       {% endblock %}
       </h1>
 
