--- a/ckanext/nap_theme/templates/package/search.html
+++ b/ckanext/nap_theme/templates/package/search.html
@@ -1,5 +1,9 @@
 {% ckan_extends %}
 
+{% set search_ns = namespace() %}
+{% set search_ns.organizations_available = h.nap_theme_get_orgs() %}
+{% set search_ns.tags_available = h.nap_theme_get_tags() %}
+
 {% block breadcrumb_content %}
   <li class="govuk-breadcrumbs__list-item"><a class='govuk-breadcrumbs__link'>{{_(h.nap_theme_get_package_display_name(dataset_type.title()))}}</a></li>
 {% endblock %}
@@ -68,11 +72,9 @@
                   </label>
                   <input id="oranisation-filter" class="filter-input govuk-input" type="text" >
                 </div>
-                {% set organizations_available = h.nap_theme_get_orgs() %}
                 {% set organization_params =  fields_grouped.get('organization') or [] %}
-                
                 <div class="govuk-checkboxes filter-checkboxes">
-                  {% for organization in organizations_available %}
+                  {% for organization in search_ns.organizations_available %}
                     <div class="govuk-checkboxes__item">
                       <input class="govuk-checkboxes__input" id="org_{{ organization.name }}" name="organization" type="checkbox" value="{{ organization.name }}" onChange="this.form.submit()"
                       {% if organization.name in organization_params %} checked {% endif %}>
@@ -142,6 +144,39 @@
                 <input id="location-filter" class="filter-input govuk-input" type="text" name="location" value="{{location_param|first}}">
               </div>
             </div>
+            <div class="govuk-accordion__section ">
+              <div class="govuk-accordion__section-header">
+                <span class="filter-expander-icon"></span>
+                <h2 class="govuk-accordion__section-heading">
+                  <span class="govuk-accordion__section-button" id="accordion-default-heading-5">
+                    {{_("Time period")}}
+                  </span>
+                </h2>
+              </div>
+              
+              {% set start_param =  h.get_request_param("ext_startdate") or "" %}
+              {% set end_param =  h.get_request_param("ext_enddate")  or "" %}
+              <div id="accordion-default-content-5" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-5">
+                <div class="govuk-form-group">
+                  <label class="govuk-label" for="time-period-start-filter">
+                    {{_("Data coverage start")}}
+                  </label>
+                  <div id="event-name-hint" class="govuk-hint">
+                    {{_("For example 05/11/2011")}}
+                  </div>
+                  <input id="time-period-start-filter" class="govuk-input" type="date" name="ext_startdate" value={{start_param}}>
+                </div>
+                <div class="govuk-form-group">
+                  <label class="govuk-label" for="time-period-start-filter">
+                    {{_("Data coverage end")}}
+                  </label>
+                  <div id="event-name-hint" class="govuk-hint">
+                    {{_("For example 05/12/2011")}}
+                  </div>
+                  <input id="time-period-end-filter" class="govuk-input" type="date" name="ext_enddate" value={{end_param}}>
+                </div>
+              </div>
+            </div>
           </div>
         </fieldset>
       </div>
@@ -199,8 +234,6 @@
         </div>
       </form>
     </div>
-    {% set organizations_available = h.nap_theme_get_orgs() %}
-    {% set tags_available = h.nap_theme_get_tags() %}
     {% set frequencies = [
       {'name': 'Live', 'value': 'live'},
       {'name': 'Daily', 'value': 'daily'},
@@ -230,7 +263,7 @@
             </span>
             <span class="facet-tag">
               {% if filter_field == 'organization'%}
-                {% set filter_display_name = h.list_dict_filter(organizations_available, "name", "display_name", filter_value) %}
+                {% set filter_display_name = h.list_dict_filter(search_ns.organizations_available, "name", "display_name", filter_value) %}
                 {% set filter_id = 'org_' ~ filter_value %}
               {% elif filter_field == 'update_frequency' %}
                 {% set filter_display_name = h.list_dict_filter(frequencies, "value", "name", filter_value) %}
